--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -342,7 +342,75 @@ textarea{
      font-size: 0.9rem;
 }
 
+.contact-form-container{
+     width:60%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     margin: 5px auto;
+}
 
+.contact-form-container form{
+     width: 95%;
+     background-color: var(--white-text);
+     border-radius: 20px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+     padding: 20px;
+     gap: 10px;
+}
+
+.contact-form-container form .group{
+     width: 90%;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     justify-content: flex-start;
+     gap:5px;
+}
+
+
+.contact-form-container form .group label{
+     font-size: 1.2rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+}
+
+
+.contact-form-container form .group input,
+.contact-form-container form .group textarea{
+     width: 100%;
+     border-radius: 10px;
+     border: 1.5px solid var(--text-color-para2);
+     color: var(--back-gold-color-v1);
+     outline: none;
+     padding: 10px 20px;
+     transition: all 0.5s ease;
+     font-weight: 600;
+}
+
+.contact-form-container form .group input:focus,
+.contact-form-container form .group textarea:focus{
+     border-color: var(--back-gold-color-v1);
+}
+
+.contact-form-container form .group input[type="submit"]{
+     background-color: var(--text-color-title);
+     color: var(--white-text);
+     cursor: pointer;
+     border-color: var(--text-color-title);
+     font-size: 1.1rem;
+     font-weight: 600;
+     transition: all 0.5s ease;
+}
+
+.contact-form-container form .group input[type="submit"]:hover{
+     background-color: var(--text-color-para2);
+     /* color:var(--text-color-title); */
+}
 .hiring-page p{
      font-size: 1rem;
      margin: 10px 5%;
