--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -168,6 +168,14 @@
      .agent-ref-shop-card{
           width: 80%;
      }
+
+     .payment-plan-page .plan-benefits-container .benefits-container,
+     .payment-plan-page .plan-benefits-container .plan-location-image-container{
+          width: 100%;
+     }
+     .plan-duration-card{
+          width: 90%;
+     }
 }
 
 
