--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -6580,14 +6580,16 @@ textarea{
 .plan-exceed-alert{
      width: 90%;
      display: flex;
-     flex-direction: column;
+     flex-direction: row;
      align-items: flex-start;
      justify-content: flex-start;
-
+     gap: 10px;
+     align-items: center;
+     padding: 10px 0;
 }
 
 .plan-exceed-alert p{
-     color: var(--back-color-red1);
+     color: var(--back-color-blue1);
      font-size: 0.9rem;
      font-weight: 700;
 }
